View Issue Details

IDProjectCategoryView StatusLast Update
0027892Open CASCADEOCCT:Modeling Algorithmspublic2016-12-09 16:38
ReporterabvAssigned Toapn  
PrioritynormalSeverityminor 
Status closedResolutionfixed 
Target Version7.1.0Fixed in Version7.1.0 
Summary0027892: Construction error in offset
DescriptionThe changes made in 0026329 lead to regression on test offset with_intersect J9: offset algorithm crashes with exception Standard_ConstructionError "BRepOffset_MakeOffset::TrimEdge no projection". The exception is generated in BRepOffset_MakeOffset.cxx, at line 1056, due to the fact that point being projected is not located on the curve. The point here has coordinates (0,0,0), which indicates that it has not been initialized. Apparently this highlights some flaw in the algorithm.
Steps To ReproduceAfter integration of 0026329:

test offset with_intersect J9
TagsNo tags attached.
Test case numberoffset with_intersect_20 J9, offset with_intersect_80 J9

Attached Files

  • f1.brep (4,287 bytes)
  • f4.brep (1,658 bytes)
  • fix.PNG (22,910 bytes)
  • master.PNG (25,452 bytes)

Relationships

parent of 0027929 closedapn Methods D0 and D1 for trimmed offset surface return different values if the surface has osculating surface 
child of 0026329 closedkgv Restore floating point signals handling in DRAW 

Activities

git

2016-09-27 13:04

administrator   ~0058197

Branch CR27892 has been created by nbv.

SHA-1: 31ab7cfe3b011087e4d023d4fdb23dabb375782b


Detailed log of new commits:

Author: nbv
Date: Tue Sep 27 12:21:24 2016 +0300

    0027892: Construction error in offset
    
    Field Geom_OffsetSurface::myOscSurf was lost when trimming offset-surface. This problem has been solved while fixing.

Author: ifv
Date: Tue Aug 9 20:12:59 2016 +0300

    0026329: Restore floating point signals handling in DRAW
    
    Added DRAW command dsetsignal, resetting OSD signal handler with either armed or disabled FPE handler, according to an option.
    If called without arguments, it sets FPE handler only if environment variable OSD_FPE is defined (with value different from 0).
    On start, DRAW calls dsetsignal to set FPE signal if CSF_FPE is defined.
    Test bugs fclasses bug6143 uses dsetsignal to set FPE handler unconditionally before the test command, and resets it to default at the end.
    
    A number of changes in the code have been done in order to fix floating point exceptions that became generated after enabling signals:
    
    - Global functions Sinh() and Cosh() defined in Standard_Real.hxx are improved to raise Standard_NumericError exception if argument is too big (greater than 710.47586), instead of relying on system treatment of floating point overflow. These functions are used instead of sinh and cosh in ElCLib.cxx.
    
    - Maximal value of parameter on hyperbola is restricted by 23 (corresponding to ~1e10 in 3d) in order to avoid FP overflow in Extrema_GenExtCS.cxx, ShapeFix_EdgeProjAux.cxx.
    
    - Interface of the root curve adaptor class Adaptor3d_Curve has been updated to add new virtual methods BasisCurve and OffsetValue. They complement the adaptor for the case of offset curves. These methods are used in Extrema_GenExtCS.cxx to restrict domain search in the case of offset of hyperbola, in order to get rid of floating point overflow. All classes inheriting Adaptor3d_Curve have been changed to implement the new virtual methods.
    
    - Protection against division by zero has been implemented in ApproxInt_KnotTools.cxx, BRepClass3d_SClassifier.cxx, BRepGProp_Face.cxx, BRepMesh_FastDiscretFace.cxx, Geom2dGcc_Circ2d2TanOnIter.cxx, Geom2dInt_Geom2dCurveTool.cxx, IntPolyh_MaillageAffinage.cxx.
    
    - Protection against calling of math functions of infinite arguments has been added in BRepCheck_Edge.cxx, BRepLib.cxx, CSLib_NormalPolyDef.cxx, Extrema_FuncExtPC.gxx, Extrema_GExtPC.gxx, Extrema_GLocateExtPC.gxx, Intf_InterferencePolygonPolyhedron.gxx, ShapeAnalysis_Surface.cxx, ShapeAnalysis_TransferParametersProj.cxx, ShapeAnalysis_Wire.cxx, math_FunctionSetRoot.cxx.
    
    - Proper initialization of local variables is done in BOPAlgo_PaveFiller_6.cxx, XSDRAWSTLVRML.cxx.
    
    - Inconsistent usage of Standard_Boolean* to access integer data in HLR (caused by 0027772) is corrected
    
    Some test cases have been updated to actual state.

git

2016-09-27 13:07

administrator   ~0058199

Branch CR27892 has been updated forcibly by nbv.

SHA-1: 60f549c561108250358f7d697646a1e2720ef908

nbv

2016-09-27 13:09

developer   ~0058201

Last edited: 2016-09-27 14:10

Dear Mikhail,

Please review CR27892 branch.

Test cases "offset with_intersect J9" and "offset with_intersect_80 K8" have been reverted to their state on the MASTER.

msv

2016-09-27 14:49

developer   ~0058213

Please, make all changes only in OffsetSurface, without changing its API, as we agreed.

git

2016-09-27 17:51

administrator   ~0058223

Branch CR27892_1 has been created by nbv.

SHA-1: 69fad86f49be1b3a59273972d41f9ce776dd9871


Detailed log of new commits:

Author: nbv
Date: Tue Sep 27 17:46:14 2016 +0300

    0027892: Construction error in offset
    
    Field Geom_OffsetSurface::myOscSurf was lost when trimming offset-surface. This problem has been solved while fixing.

nbv

2016-09-27 17:52

developer   ~0058224

Done!

Dear Mikhail,

Please review CR27892_1 branch.

git

2016-09-27 19:48

administrator   ~0058229

Branch CR27892_1 has been updated forcibly by msv.

SHA-1: 272f7ea6a3d57e6cd610284373d9c21155d1c7c7

msv

2016-09-27 19:49

developer   ~0058230

I have corrected the commit message.
Reviewed.
Please test.

git

2016-09-28 09:36

administrator   ~0058234

Branch CR27892_1 has been updated forcibly by msv.

SHA-1: c5f80e46c0fd3dde95d54c7647d7a3f37a5e6c23

nbv

2016-09-28 10:18

developer   ~0058235

Method Value for Geom_OffsetSurface uses field myOscSurf in case when the normal to basis surface is small. If myOscSurf is null then the value is computed by another algorithm and (in most cases) has become wrong.

As result, earlier (when myOscSurf was not initialized) intersection result of two offset surfaces (indeed, offset surfaces are not intersected; they are converted to B-spline before intersection algorithm launching) was wrong (section edge was incorrect). Therefore, in place of the code where the common vertex of two edges (at least, one of them is intersection edge) is taken, wrong vertex is returned. It was the reason of described exception.

After the fix, correct surfaces are intersected and the result is correct (section) edge. Therefore, all common vertices are found correctly.

P.S.

On the current MASTER, field myOscSurf is initialized correctly even for trimmed surface. The reason, why it is not after the fix 0026329 is not investigated.

mkv

2016-09-28 17:26

tester   ~0058278

Dear BugMaster,
Branch CR27892_1 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode.
SHA-1: 272f7ea6a3d57e6cd610284373d9c21155d1c7c7

Number of compiler warnings:

occt component :
Linux: 0 (0 on master)
Windows: 0 (0 on master)
MacOS : 0 (0 on master)

products component :
Linux: 64 (64 on master)
Windows: 0 (0 on master)
MacOS : 1133

Regressions/Differences/Improvements:

http://occt-tests/CR27892_1-master-OCCT/Debian70-64/bugs/modalg_4/bug8842_8.html
http://occt-tests/CR27892_1-master-OCCT/Windows-64-VC10/bugs/modalg_4/bug8842_8.html
bugs modalg_4 bug8842_8: FAILED

http://occt-tests/CR27892_1-master-Products/Debian70-64/emesh/bugs/bug26326_1.html
http://occt-tests/CR27892_1-master-Products/Windows-64-VC10/emesh/bugs/bug26326_1.html
emesh bugs bug26326_1: IMPROVEMENT

Testing cases:
http://occt-tests/CR27892_1-master-OCCT/Debian70-64/offset/with_intersect_20/J9.html
http://occt-tests/CR27892_1-master-OCCT/Windows-64-VC10/offset/with_intersect_20/J9.html
offset with_intersect_20 J9: BAD (known problem)
http://occt-tests/CR27892_1-master-OCCT/Debian70-64/offset/with_intersect_80/J9.html
http://occt-tests/CR27892_1-master-OCCT/Windows-64-VC10/offset/with_intersect_80/J9.html
offset with_intersect_80 J9: BAD (known problem)

Testing on Linux:
occt component :
Total MEMORY difference: 90980156 / 90236020 [+0.82%]
Total CPU difference: 19329.229999999854 / 19249.509999999875 [+0.41%]
products component :
Total MEMORY difference: 30024241 / 30053704 [-0.10%]
Total CPU difference: 5111.049999999978 / 5152.219999999975 [-0.80%]

Testing on Windows:
occt component :
Total MEMORY difference: 57216986 / 57221541 [-0.01%]
Total CPU difference: 17950.73866809867 / 18310.78897609872 [-1.97%]
products component :
Total MEMORY difference: 21272053 / 21235672 [+0.17%]
Total CPU difference: 4901.832221799954 / 4988.631178199945 [-1.74%]

There are following differences in images found by testdiff.
http://occt-tests/CR27892_1-master-OCCT/Windows-64-VC10/diff-Windows-64-VC10-image.html
IMAGE bugs modalg_4 bug8842_8: bug8842_8.png differs

http://occt-tests/CR27892_1-master-Products/Windows-64-VC10/diff-Windows-64-VC10-image.html
IMAGE emesh bugs bug26326_1: bug26326_1.png differs

mkv

2016-09-28 17:27

tester   ~0058279

Dear msv,
Branch CR27892_1 has been rejected due to:
- regressions/differences/improvements
- differences in images

nbv

2016-10-04 13:53

developer  

f1.brep (4,287 bytes)

nbv

2016-10-04 13:53

developer  

f4.brep (1,658 bytes)

nbv

2016-10-04 14:06

developer   ~0058392

Last edited: 2016-10-04 14:09

About the regression in "bugs modalg_4 bug8842_8" test case.

By the reason described in the issue 0027929, intersection between two offset surfaces cannot be found:

Draw[]> restore f1.brep
Draw[]> restore f4.brep
Draw[]> bsection rr f1 f4
Draw[]> nbs rr
# FIX: VERTEX : 4; EDGE : 2
# MASTER: VERTEX : 2; EDGE : 1

Draw[9]> lprops rr 1.0e-4
# FIX: 0.0199311
# MASTER: 87.8157

See fix.png and master.png attached pictures in order to understand differences (on the fix, ZOOM is required in order to see section result). As result, on the fix, the offset shell cannot be built correctly.

This situation should be fixed in frame of the issue 0027929.

nbv

2016-10-04 14:07

developer  

fix.PNG (22,910 bytes)

nbv

2016-10-04 14:07

developer  

master.PNG (25,452 bytes)

nbv

2016-10-04 14:25

developer   ~0058394

emesh bugs bug26326_1: IMPROVEMENT

On the my machine, the situation is the same as on the MASTER.

git

2016-10-04 14:31

administrator   ~0058395

Branch CR27892_2 has been created by nbv.

SHA-1: 24fd3625b67cbcd1b226898378522386fe95910e


Detailed log of new commits:

Author: nbv
Date: Tue Sep 27 17:46:14 2016 +0300

    0027892: Construction error in offset
    
    Provide proper initialization of the field Geom_OffsetSurface::myOscSurf in the case of creating offset of the trimmed bspline surface.
    
    Adjusting test cases according to their new behavior.

nbv

2016-10-04 14:32

developer   ~0058396

Dear Mikhail,

Please review CR27892_2 branch. Only test case has been corrected.

msv

2016-10-04 15:44

developer   ~0058401

Reviewed. However, I recommend to postpone integration of this fix till resolution of 0027929.

mkv

2016-10-05 12:50

tester   ~0058418

Dear BugMaster,
Branch CR27892_2 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode.
SHA-1: 24fd3625b67cbcd1b226898378522386fe95910e

Number of compiler warnings:

occt component :
Linux: 0 (0 on master)
Windows: 0 (0 on master)
MacOS : 0 (0 on master)

products component :
Linux: 64 (64 on master)
Windows: 0 (0 on master)
MacOS : 1132

Regressions/Differences/Improvements:
No regressions/differences

Testing cases:
http://occt-tests/CR27892_2-master-OCCT/Debian70-64/offset/with_intersect_20/J9.html
http://occt-tests/CR27892_2-master-OCCT/Windows-64-VC10/offset/with_intersect_20/J9.html
offset with_intersect_20 J9: BAD (known problem)
http://occt-tests/CR27892_2-master-OCCT/Debian70-64/offset/with_intersect_80/J9.html
http://occt-tests/CR27892_2-master-OCCT/Windows-64-VC10/offset/with_intersect_80/J9.html
offset with_intersect_80 J9: BAD (known problem)

Testing on Linux:
occt component :
Total MEMORY difference: 90808033 / 90432455 [+0.42%]
Total CPU difference: 19343.93999999981 / 19274.589999999782 [+0.36%]
products component :
Total MEMORY difference: 29998286 / 30036359 [-0.13%]
Total CPU difference: 5161.799999999972 / 5173.459999999983 [-0.23%]

Testing on Windows:
occt component :
Total MEMORY difference: 57230022 / 57236340 [-0.01%]
Total CPU difference: 19176.157723298707 / 18116.099728098634 [+5.85%]
products component :
Total MEMORY difference: 21274979 / 21238613 [+0.17%]
Total CPU difference: 5429.7240056999735 / 4976.229098699953 [+9.11%]

There are following differences in images found by testdiff.
http://occt-tests/CR27892_2-master-OCCT/Windows-64-VC10/diff-Windows-64-VC10-image.html
IMAGE bugs modalg_4 bug8842_8: bug8842_8.png differs

mkv

2016-10-05 12:51

tester   ~0058419

Waiting resolution of 0027929

nbv

2016-10-06 11:43

developer   ~0058452

Dear Mikhail (MKV),

Now bug 0027929 is tested. The regression in "bugs modalg_4 bug8842_8" has been fixed.

Therefore, please reclassify this issue as TESTED, too.

TIA.

git

2016-10-28 21:41

administrator   ~0059453

Branch CR27892 has been deleted by kgv.

SHA-1: 60f549c561108250358f7d697646a1e2720ef908

git

2016-10-28 21:42

administrator   ~0059454

Branch CR27892_1 has been deleted by kgv.

SHA-1: c5f80e46c0fd3dde95d54c7647d7a3f37a5e6c23

git

2016-10-28 21:42

administrator   ~0059455

Branch CR27892_2 has been deleted by kgv.

SHA-1: 24fd3625b67cbcd1b226898378522386fe95910e

Related Changesets

occt: master 41ce5887

2016-09-27 14:46:14

nbv


Committer: apn Details Diff
0027892: Construction error in offset

Provide proper initialization of the field Geom_OffsetSurface::myOscSurf in the case of creating offset of the trimmed bspline surface.

Adjusting test cases according to their new behavior.
Affected Issues
0027892
mod - src/Geom/Geom_OffsetSurface.cxx Diff File
mod - tests/bugs/modalg_4/bug8842_8 Diff File
mod - tests/offset/with_intersect_20/J9 Diff File
mod - tests/offset/with_intersect_80/J9 Diff File
mod - tests/offset/with_intersect_80/K8 Diff File

Issue History

Date Modified Username Field Change
2016-09-22 06:50 abv New Issue
2016-09-22 06:50 abv Assigned To => msv
2016-09-22 06:50 abv Relationship added child of 0026329
2016-09-22 14:44 msv Assigned To msv => nbv
2016-09-22 14:44 msv Status new => assigned
2016-09-27 13:04 git Note Added: 0058197
2016-09-27 13:07 git Note Added: 0058199
2016-09-27 13:09 nbv Note Added: 0058201
2016-09-27 13:09 nbv Assigned To nbv => msv
2016-09-27 13:09 nbv Status assigned => resolved
2016-09-27 13:10 nbv Note Edited: 0058201
2016-09-27 14:10 nbv Note Edited: 0058201
2016-09-27 14:49 msv Note Added: 0058213
2016-09-27 14:49 msv Assigned To msv => nbv
2016-09-27 14:49 msv Status resolved => assigned
2016-09-27 17:51 git Note Added: 0058223
2016-09-27 17:52 nbv Note Added: 0058224
2016-09-27 17:52 nbv Assigned To nbv => msv
2016-09-27 17:52 nbv Status assigned => resolved
2016-09-27 19:48 git Note Added: 0058229
2016-09-27 19:49 msv Note Added: 0058230
2016-09-27 19:49 msv Assigned To msv => bugmaster
2016-09-27 19:49 msv Status resolved => reviewed
2016-09-27 20:02 mkv Assigned To bugmaster => mkv
2016-09-28 09:36 git Note Added: 0058234
2016-09-28 10:18 nbv Note Added: 0058235
2016-09-28 17:26 mkv Note Added: 0058278
2016-09-28 17:27 mkv Note Added: 0058279
2016-09-28 17:27 mkv Assigned To mkv => msv
2016-09-28 17:27 mkv Status reviewed => assigned
2016-09-28 17:27 mkv Test case number => offset with_intersect_20 J9, offset with_intersect_80 J9
2016-09-28 17:28 nbv Assigned To msv => nbv
2016-10-04 13:51 nbv Relationship added parent of 0027929
2016-10-04 13:53 nbv File Added: f1.brep
2016-10-04 13:53 nbv File Added: f4.brep
2016-10-04 14:06 nbv Note Added: 0058392
2016-10-04 14:07 nbv File Added: fix.PNG
2016-10-04 14:07 nbv File Added: master.PNG
2016-10-04 14:09 nbv Note Edited: 0058392
2016-10-04 14:25 nbv Note Added: 0058394
2016-10-04 14:31 git Note Added: 0058395
2016-10-04 14:32 nbv Note Added: 0058396
2016-10-04 14:32 nbv Assigned To nbv => msv
2016-10-04 14:32 nbv Status assigned => resolved
2016-10-04 15:44 msv Note Added: 0058401
2016-10-04 15:44 msv Assigned To msv => bugmaster
2016-10-04 15:44 msv Status resolved => reviewed
2016-10-04 17:27 mkv Assigned To bugmaster => mkv
2016-10-05 12:50 mkv Note Added: 0058418
2016-10-05 12:51 mkv Note Added: 0058419
2016-10-05 12:51 mkv Assigned To mkv => nbv
2016-10-05 12:51 mkv Status reviewed => feedback
2016-10-06 11:43 nbv Note Added: 0058452
2016-10-06 11:43 nbv Assigned To nbv => mkv
2016-10-06 12:26 apn Assigned To mkv => bugmaster
2016-10-06 12:26 apn Status feedback => tested
2016-10-07 16:09 apn Changeset attached => occt master 41ce5887
2016-10-07 16:09 apn Assigned To bugmaster => apn
2016-10-07 16:09 apn Status tested => verified
2016-10-07 16:09 apn Resolution open => fixed
2016-10-28 21:41 git Note Added: 0059453
2016-10-28 21:42 git Note Added: 0059454
2016-10-28 21:42 git Note Added: 0059455
2016-12-09 16:30 aiv Status verified => closed
2016-12-09 16:38 aiv Fixed in Version => 7.1.0